hphp/test/zend7/tests/lang/type_hints_001.php.expectf

Fatal error: %s
Stack trace:
#0 %s(%d): type_hint_foo(Object(Bar))
#1 {main}
  thrown in %s on line 9